src/objects/Payment__c.object
<CustomObject>
    <description>Eway payment records</description>
    <fields>
        <fullName>Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit</label>
        <referenceTo>Credit__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Card_Expiry_Month__c</fullName>
        <label>Eway Card Expiry Month</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Card_Expiry_Year__c</fullName>
        <label>Eway Card Expiry Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Card_Holder_Name__c</fullName>
        <label>Eway Card Holder Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Card_Number__c</fullName>
        <label>Eway Card Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Customer_Id__c</fullName>
        <label>Eway_Customer_Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Errors__c</fullName>
        <label>Eway Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Gateway_Url__c</fullName>
        <label>Eway Gateway Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Total_Amount__c</fullName>
        <label>Eway_Total_Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Txn_Error__c</fullName>
        <label>Eway Txn Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Txn_Number__c</fullName>
        <label>Eway Txn Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Txn_Reference__c</fullName>
        <label>Eway Txn Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eway_Txn_Status__c</fullName>
        <label>Eway Txn Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Reference__c</fullName>
        <label>Invoice Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Batch</label>
        <referenceTo>Invoice_Batch__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Name__c</fullName>
        <label>Payment_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <label>Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Eway</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Eway2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eway Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Buddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commweb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commweb2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Owner_Role__c</fullName>
        <formula>Payment_Owner__r.UserRole.Name</formula>
        <label>Payment Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chargeback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promocode__c</fullName>
        <formula>Invoice__r.Account_Product__r.Sign_Up_del__r.Promocode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promocode</label>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>